@@ -1,11 +1,15 @@
 dnl GNU General Public license v3 or later
-dnl Copyright 2019 Ales Cepek <cepek@gnu.org>
+dnl Copyright 2019, 2022 Ales Cepek <cepek@gnu.org>
 
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
 
-AC_INIT([gama],[2.18],[bug-gama@gnu.org])
+dnl GNU Gama version is also defined in CMakeLists.txt and
+dnl lib/gnu_gama.version.cpp
+
+AC_INIT([gama],[2.18.1],[bug-gama@gnu.org])
+
 AC_CONFIG_SRCDIR([lib/gnu_gama/version.cpp])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_AUX_DIR([scripts/config.aux])
