@@ -1,3 +1,7 @@
+	* New glossary of basic terms used in gama-local text output and
+	in documentation.
+
+
 2022-04-09   Ales Cepek <cepek@gnu.org>
 
 	New release 2.18
